--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 <body>
 
     <div id="tarolo">
-        <button>o</button>
-        <button></button>
-        <button></button>
+        <button onclick="kattintas(this)"></button>
+        <button onclick="kattintas(this)"></button>
+        <button onclick="kattintas(this)"></button>
 
-        <button>x</button>
-        <button></button>
-        <button></button>
+        <button onclick="kattintas(this)"></button>
+        <button onclick="kattintas(this)"></button>
+        <button onclick="kattintas(this)"></button>
 
-        <button></button>
-        <button></button>
-        <button></button>
+        <button onclick="kattintas(this)"></button>
+        <button onclick="kattintas(this)"></button>
+        <button onclick="kattintas(this)"></button>
     </div>
 
+    <script src="amoba.js"></script>
 </body>
 </html>
